# finance-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai_finance_research_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app/: __init__.py  cli.py  config.py  llm_adapter.py  models.py  service.py  workflow.py  workflow_state.py
app/api/: README.md  __init__.py
app/nodes/: __init__.py  collect_and_deduplicate.py  event_analysis.py  event_extractor.py  report_writer.py
app/prompts/: event_analysis.md  event_extractor.md
app/reports/: renderer.py  summary.py
app/reports/templates/: report.html.j2  report.md.j2
app/tools/: __init__.py  deduplicate.py  replay.py  rss.py
app/ui/: streamlit_app.py
config/: sources.yaml
demo/: replay_ai_news.json
docs/: DEMO_WALKTHROUGH.md  ONE_DAY_MVP_PLAN.md  P0_CHECKLIST.md
outputs/sample_live/: report.html  report.md  result.json
outputs/sample_replay_llm/: report.html  report.md  result.json
tests/: test_cli.py  test_deduplicate.py  test_event_analysis_node.py  test_llm_adapter.py  test_models.py  test_replay_llm.py  test_replay_workflow.py  test_report.py  test_rss.py
