[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-finance-research-agent"
version = "0.1.0"
description = "One-day MVP for evidence-grounded AI finance research reports"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.11",
  "httpx>=0.27",
  "jinja2>=3.1",
  "langchain-openai>=0.3",
  "langgraph>=0.4",
  "markdown>=3.6",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "rapidfuzz>=3.9",
  "streamlit>=1.36",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
ai-finance-agent = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

